--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,11 +49,13 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintVertical_bias="0.0">
 
         <RadioButton
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="1dp"
+            android:layout_height="1dp"
             android:checked="true"
             app:layout_constraintRight_toLeftOf="@+id/medium"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -66,8 +68,8 @@
 
         <RadioButton
             android:id="@+id/hard"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="1dp"
+            android:layout_height="1dp"
             android:text="Hard"
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toRightOf="@+id/medium"
@@ -85,8 +87,8 @@
 
         <RadioButton
             android:id="@+id/medium"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="1dp"
+            android:layout_height="1dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp"
             android:layout_marginTop="16dp"
@@ -103,5 +105,21 @@
             android:onClick="play"/>
 
     </android.support.constraint.ConstraintLayout>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/themes"
+        android:id="@+id/themes"
+        app:layout_constraintRight_toLeftOf="@+id/settings"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/level"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toTopOf="@+id/level"
+        app:layout_constraintBottom_toTopOf="@+id/imageButton"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.19"
+        android:onClick="themesDialog"/>
 
 </android.support.constraint.ConstraintLayout>
