--- a/app/src/main/res/layout/settings_dialog.xml
+++ b/app/src/main/res/layout/settings_dialog.xml
@@ -37,18 +37,9 @@
         android:defaultValue="true"
         android:layout_height="65dp"
         android:layout_width="60dp"
-        android:id="@+id/soundfx"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/display_name"
-        app:layout_constraintVertical_bias="0.3" />
+        android:id="@+id/music"
+        tools:layout_editor_absoluteY="94dp"
+        tools:layout_editor_absoluteX="145dp" />
     <SeekBar
         android:defaultValue="100"
         android:title="Volume"
@@ -57,7 +48,7 @@
         android:layout_height="65dp"
         android:layout_width="100dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/soundfx"
+        app:layout_constraintLeft_toRightOf="@+id/music"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -75,9 +66,9 @@
         android:textOff="Music OFF"
         android:textOn="Music ON"
         android:defaultValue="true"
-        android:id="@+id/music"
+        android:id="@+id/soundfx"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/soundfx"
+        app:layout_constraintTop_toBottomOf="@+id/music"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="16dp"
@@ -86,7 +77,7 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp"
-        app:layout_constraintVertical_bias="0.33"
+        app:layout_constraintVertical_bias="0.32999998"
         android:layout_width="60dp"
         android:layout_height="65dp" />
 
@@ -100,7 +91,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/music"
+        app:layout_constraintLeft_toRightOf="@+id/soundfx"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -114,7 +105,7 @@
         android:layout_width="113dp"
         app:srcCompat="@drawable/music"
         android:id="@+id/imageView"
-        app:layout_constraintRight_toLeftOf="@+id/soundfx"
+        app:layout_constraintRight_toLeftOf="@+id/music"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="16dp"
@@ -135,7 +126,7 @@
         android:layout_width="113dp"
         android:layout_marginTop="168dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/music"
+        app:layout_constraintRight_toLeftOf="@+id/soundfx"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="16dp"
