--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,85 +41,42 @@
         android:onClick="settingsMenu"
         android:background="@drawable/ic_settings" />
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="0dp"
-        android:id="@+id/level"
-        android:visibility="gone"
-        android:layout_height="0dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintVertical_bias="0.0">
-
-        <RadioButton
-            android:layout_width="1dp"
-            android:layout_height="1dp"
-            android:checked="true"
-            app:layout_constraintRight_toLeftOf="@+id/medium"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:id="@+id/easy"
-            android:button="@drawable/empty"
-            android:background="@drawable/easy"
-            android:onClick="play"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
-        <RadioButton
-            android:id="@+id/hard"
-            android:layout_width="1dp"
-            android:layout_height="1dp"
-            android:text="Hard"
-            android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/medium"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            android:button="@drawable/empty"
-            android:enabled="false"
-            android:background="@drawable/harddisabled"/>
-
-        <RadioButton
-            android:id="@+id/medium"
-            android:layout_width="1dp"
-            android:layout_height="1dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@drawable/mediumdisabled"
-            android:enabled="false"
-            android:button="@drawable/empty"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            android:onClick="play"/>
-
-    </android.support.constraint.ConstraintLayout>
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/themes"
         android:id="@+id/themes"
+        android:onClick="themesDialog"
         app:layout_constraintRight_toLeftOf="@+id/settings"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/level"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintTop_toTopOf="@+id/level"
+        android:layout_marginEnd="96dp"
+        android:layout_marginRight="96dp"
         app:layout_constraintBottom_toTopOf="@+id/imageButton"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.19"
-        android:onClick="themesDialog"/>
+        android:layout_marginBottom="48dp"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintVertical_bias="0.32"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:drawable/ic_dialog_info"
+        android:id="@+id/about"
+        android:background="@drawable/empty"
+        app:layout_constraintRight_toLeftOf="@+id/imageButton"
+        android:layout_marginEnd="136dp"
+        android:layout_marginRight="136dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp" />
 
 </android.support.constraint.ConstraintLayout>
