--- a/app/src/main/res/layout/settings_dialog.xml
+++ b/app/src/main/res/layout/settings_dialog.xml
@@ -38,8 +38,17 @@
         android:layout_height="65dp"
         android:layout_width="60dp"
         android:id="@+id/music"
-        tools:layout_editor_absoluteY="94dp"
-        tools:layout_editor_absoluteX="145dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/display_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintVertical_bias="0.32999998"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp" />
     <SeekBar
         android:defaultValue="100"
         android:title="Volume"
