--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -139,12 +139,11 @@
 
     <TextView
         android:text="Top:"
-        android:layout_width="107dp"
-        android:layout_height="wrap_content"
+        android:layout_width="151dp"
+        android:layout_height="50dp"
         android:id="@+id/topScore"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
@@ -157,25 +156,26 @@
         android:fontFamily="sans-serif"
         android:textStyle="normal|bold"
         android:textSize="36sp"
-        android:textColor="?android:attr/colorPressedHighlight"  />
+        android:textColor="?android:attr/colorPressedHighlight"
+        app:layout_constraintRight_toLeftOf="@+id/pause" />
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="43dp"
+        android:layout_width="40dp"
+        android:layout_height="39dp"
         android:id="@+id/pause"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
-        app:layout_constraintRight_toLeftOf="@+id/topScore"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.98"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/topRightMole"
         android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.0"
         android:onClick="pause"
-        android:background="@drawable/pause"/>
+        android:background="@drawable/pause"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        app:layout_constraintHorizontal_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
