--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,9 @@
     tools:context="corem.eldad.molestrike.MainActivity">
 
     <ImageButton
-        android:layout_width="115dp"
-        android:layout_height="91dp"
-        android:id="@+id/imageButton"
+        android:layout_width="210dp"
+        android:layout_height="89dp"
+        android:id="@+id/play"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -47,36 +47,33 @@
         app:srcCompat="@drawable/themes"
         android:id="@+id/themes"
         android:onClick="themesDialog"
-        app:layout_constraintRight_toLeftOf="@+id/settings"
-        android:layout_marginEnd="96dp"
-        android:layout_marginRight="96dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/play"
         android:layout_marginBottom="48dp"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintVertical_bias="0.32"
+        app:layout_constraintVertical_bias="0.13"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="46dp"
+        android:layout_height="43dp"
         app:srcCompat="@android:drawable/ic_dialog_info"
         android:id="@+id/about"
         android:background="@drawable/empty"
-        app:layout_constraintRight_toLeftOf="@+id/imageButton"
+        app:layout_constraintRight_toLeftOf="@+id/play"
         android:layout_marginEnd="136dp"
         android:layout_marginRight="136dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintVertical_bias="1.0"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp" />
+        android:onClick="about"/>
 
 </android.support.constraint.ConstraintLayout>
