--- a/app/src/main/res/layout/leader_board.xml
+++ b/app/src/main/res/layout/leader_board.xml
@@ -8,7 +8,7 @@
     <TableLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
+        android:background="@drawable/curve_shape"
         android:id="@+id/table">
 
         <TableRow
