--- a/app/src/main/res/layout/leader_board.xml
+++ b/app/src/main/res/layout/leader_board.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/curve_shape"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:id="@+id/table">
 
         <TableRow
