--- a/app/src/main/res/layout/activity_game_medium.xml
+++ b/app/src/main/res/layout/activity_game_medium.xml
@@ -208,6 +208,17 @@
         android:background="@drawable/pause"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="1.0" />
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/instructions"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.38" />
 
     <ImageView
         android:layout_width="219dp"
