--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -26,36 +26,60 @@
 
     <ImageView
         android:visibility="gone"
-        android:layout_width="562dp"
-        android:layout_height="81dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:srcCompat="@drawable/highscore"
         android:id="@+id/highScore"
         app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
         app:layout_constraintVertical_bias="0.19" />
 
     <ImageView
         android:visibility="gone"
-        android:layout_width="580dp"
-        android:layout_height="82dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:srcCompat="@drawable/newlevel"
         android:id="@+id/newLevel"
-        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/highScore"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintVertical_bias="0.19" />
+
+    <com.facebook.share.widget.ShareButton
+        android:id="@+id/share_button"
+        android:layout_width="82dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center_horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintVertical_bias="0.41000003"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/newLevel"
+        android:visibility="gone"
+        app:layout_constraintHorizontal_bias="0.33" />
+
+    <ImageButton
+        android:id="@+id/Continue"
+        android:layout_width="82dp"
+        android:layout_height="40dp"
+        app:srcCompat="@android:drawable/ic_media_play"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/share_button"
+        android:layout_marginLeft="8dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/newLevel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintVertical_bias="0.55"
+        android:background="@drawable/empty"
+        android:visibility="gone"/>
 
 </android.support.constraint.ConstraintLayout>
