--- a/app/src/main/res/layout/ingame_dialog.xml
+++ b/app/src/main/res/layout/ingame_dialog.xml
@@ -4,24 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="#303030"
     android:orientation="horizontal"
-    android:layout_width="225dp"
-    android:layout_height="100dp">
+    android:layout_height="100dp"
+    android:layout_width="300dp">
 
     <ImageButton
         android:layout_width="44dp"
         android:layout_height="37dp"
         android:id="@+id/resumeGame"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@android:drawable/ic_media_play"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
+        app:layout_constraintVertical_bias="0.84"
+        android:clickable="true"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/exitGame"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+    <ImageButton
+        android:layout_width="44dp"
+        android:layout_height="37dp"
+        android:id="@+id/exitGame"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@android:drawable/ic_delete"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintVertical_bias="0.82"
-        android:clickable="true"/>
+        app:layout_constraintVertical_bias="0.84000003"
+        android:clickable="true"
+        app:layout_constraintHorizontal_bias="0.39" />
 
     <Switch
         android:layout_width="79dp"
@@ -37,10 +56,12 @@
         app:layout_constraintVertical_bias="0.0"
         android:background="@drawable/music"
         android:button="@drawable/empty"
-        app:layout_constraintRight_toLeftOf="@+id/resumeGame"
         android:clickable="true"
         android:track="@drawable/empty"
-        android:thumb="@drawable/empty" />
+        android:thumb="@drawable/empty"
+        app:layout_constraintRight_toLeftOf="@+id/exitGame"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp" />
 
     <Switch
         android:layout_width="84dp"
@@ -58,7 +79,8 @@
         android:button="@drawable/empty"
         app:layout_constraintLeft_toRightOf="@+id/resumeGame"
         android:track="@drawable/empty"
-        android:thumb="@drawable/empty" />
+        android:thumb="@drawable/empty"
+        app:layout_constraintHorizontal_bias="1.0" />
 
 
 </android.support.constraint.ConstraintLayout>
