--- a/app/src/main/res/layout/info_dialog.xml
+++ b/app/src/main/res/layout/info_dialog.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="#303030"
     android:orientation="horizontal"
-    android:layout_height="150dp"
-    android:layout_width="450dp">
+    android:layout_width="450dp"
+    android:layout_height="250dp">
 
 
     <ScrollView
