--- a/app/src/main/res/layout/ingame_dialog.xml
+++ b/app/src/main/res/layout/ingame_dialog.xml
@@ -18,12 +18,12 @@
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintVertical_bias="0.84"
+        app:layout_constraintVertical_bias="0.8"
         android:clickable="true"
         android:layout_marginStart="8dp"
         app:layout_constraintLeft_toRightOf="@+id/exitGame"
         android:layout_marginLeft="8dp"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.37" />
 
     <ImageButton
         android:layout_width="44dp"
@@ -38,9 +38,9 @@
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintVertical_bias="0.84000003"
+        app:layout_constraintVertical_bias="0.84"
         android:clickable="true"
-        app:layout_constraintHorizontal_bias="0.39" />
+        app:layout_constraintHorizontal_bias="0.33" />
 
     <Switch
         android:layout_width="79dp"
@@ -67,20 +67,19 @@
         android:layout_width="84dp"
         android:layout_height="31dp"
         android:id="@+id/soundfxInGame"
+        android:background="@drawable/soundfx"
+        android:button="@drawable/empty"
+        android:track="@drawable/empty"
+        android:thumb="@drawable/empty"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
         app:layout_constraintVertical_bias="0.0"
-        android:background="@drawable/soundfx"
-        android:button="@drawable/empty"
-        app:layout_constraintLeft_toRightOf="@+id/resumeGame"
-        android:track="@drawable/empty"
-        android:thumb="@drawable/empty"
-        app:layout_constraintHorizontal_bias="1.0" />
+        app:layout_constraintLeft_toRightOf="@+id/resumeGame" />
 
 
 </android.support.constraint.ConstraintLayout>
