--- a/app/src/main/res/layout/settings_dialog.xml
+++ b/app/src/main/res/layout/settings_dialog.xml
@@ -14,7 +14,7 @@
         android:maxLines="1"
         android:selectAllOnFocus="true"
         android:title="Your Name"
-        android:layout_height="38dp"
+        android:layout_height="42dp"
         android:id="@+id/display_name"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,8 +26,9 @@
         android:layout_marginLeft="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.0"
-        android:layout_width="100dp" />
+        app:layout_constraintVertical_bias="0.07"
+        android:layout_width="109dp"
+        app:layout_constraintHorizontal_bias="0.25" />
 
     <Switch
         android:key="soundfx"
@@ -42,7 +43,7 @@
         app:layout_constraintTop_toBottomOf="@+id/display_name"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.32999998"
+        app:layout_constraintVertical_bias="0.2"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
@@ -145,6 +146,17 @@
         android:layout_marginBottom="16dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintVertical_bias="0.89" />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="105dp"
+        android:layout_height="80dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.88" />
 
 
 </android.support.constraint.ConstraintLayout>
